# Prism

./: .gitignore  AGENTS.md  CLAUDE.md  HANDOFF.md  PRISM_STATE.md  STAGE2_AGGREGATION_DESIGN.md  STAGE2_GRAPH_DESIGN.md  STAGE2_PIPELINE_DESIGN.md  WINDOW_CONTEXT_PROTOCOL.md  pyproject.toml  repo-index.json
00.00_Project_Management/: 01_DEFINE.md  02_PLAN.md  03_STAGE_MATRIX.md  04_SCHEMA_PROTOCOL.md  05_LANGGRAPH_ARCHITECTURE.md  06_TASKS.md  07_WORKTREE_ARCHITECTURE.md  AUDIT_P27_COMPOSITIONAL_DETECTORS.md  COMPARISON_MRKDWN_VS_PRISM.md
prism/: __init__.py
prism/config/: __init__.py
prism/core/: __init__.py  processing_unit.py  validation_unit.py
prism/embedding/: __init__.py
prism/observability/: __init__.py
prism/orchestrator/: __init__.py
prism/schemas/: __init__.py  enums.py  global_pg.py  physical.py  semantic.py  token.py
prism/stage1/: __init__.py  converter.py  gap_filler.py  loader.py  metadata.py  tokenizer.py  validation_v1.py
tests/: conftest.py  test_footnote_ref.py  test_gap_filler.py  test_horizontal_rule.py  test_indented_code_block.py  test_inline_detectors.py  test_layer_crud.py  test_processing_unit.py  test_schemas_detection.py  test_schemas_global.py  test_schemas_horizontal_rule.py  test_schemas_nested.py  test_schemas_physical.py  test_schemas_semantic.py  test_schemas_task_list.py  test_schemas_tokens.py  test_schemas_typed_components.py  test_setext_headings.py  test_stage1_loader.py  test_stage1_metadata.py  test_stage1_tokenizer.py  test_stage2_graph_state.py  test_stage2_orchestration.py  test_stage2_parser.py  test_stage2_pipeline.py  test_stage2_subgraph.py  test_task_list_crud.py  test_task_list_detector.py  test_validation_unit.py  test_validation_v1.py  test_validation_v2.py
(+70 files in other folders)
